# angelscript-rs

./: .claudeignore  .clauderc  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  analyze_profile.py  app_spec.md  codecov.yml  feature_list.json
.agent/: prompt.md
.claudesync/: config.local.json
.config/: nextest.toml
.githooks/: pre-commit
benches/: module_benchmarks.rs  parser_benchmarks.rs
claude/: cargo 2025-12-01 21.51 profile.json  compiler_design.md  decisions.md  enhanced_switch.md  ffi_plan.md  ffi_registration_refactor.md  init_list_implicit_conversion.md  performance_tuning_plan.md  profile_analysis_instructions.md  prompt.md  rune_analysis.md  semantic_analysis_plan.md  template_registration_design.md  type_registry_design.md  type_registry_plan.md  vm_plan.md
crates/angelscript-addons/: Cargo.toml
crates/angelscript-addons/src/: addon.rs  debugger.rs  lib.rs  math.rs  script_builder.rs  string.rs  stringfactory.rs
crates/angelscript-addons/tests/: debugger_test.rs  math_test.rs  script_builder_test.rs  string_test.rs
crates/angelscript-compiler/: Cargo.toml
crates/angelscript-compiler/src/: context.rs  conversion.rs  expr_info.rs  field_init.rs  function_compiler.rs  lib.rs  registry.rs  return_checker.rs  scope.rs  type_resolver.rs
crates/angelscript-compiler/src/bytecode/: chunk.rs  constant.rs  mod.rs  opcode.rs
crates/angelscript-compiler/src/conversion/: handle.rs  mod.rs  operators.rs  primitive.rs  user_defined.rs
crates/angelscript-compiler/src/emit/: jumps.rs  mod.rs
crates/angelscript-compiler/src/expr/: assignment.rs  binary.rs  calls.rs  cast.rs  identifiers.rs  init_list.rs  lambda.rs  literals.rs  member.rs  mod.rs  ternary.rs  unary.rs
crates/angelscript-compiler/src/operators/: binary.rs  mod.rs  primitive.rs  unary.rs
crates/angelscript-compiler/src/overload/: mod.rs  operators.rs  ranking.rs
crates/angelscript-compiler/src/passes/: compilation.rs  completion.rs  mod.rs  registration.rs  registration_result.rs
crates/angelscript-compiler/src/passes/compilation/: mod.rs
crates/angelscript-compiler/src/stmt/: block.rs  do_while_stmt.rs  for_stmt.rs  foreach_stmt.rs  if_stmt.rs  mod.rs  return_stmt.rs  switch_stmt.rs  try_catch.rs  var_decl.rs  while_stmt.rs
crates/angelscript-compiler/src/template/: cache.rs  instantiation.rs  mod.rs  substitution.rs  validation.rs
crates/angelscript-compiler/src/types/: behaviors.rs  data_type.rs  expr_info.rs  function_def.rs  mod.rs  type_def.rs  type_hash.rs
crates/angelscript-core/: Cargo.toml
crates/angelscript-core/src/: any.rs  any_type.rs  behaviors.rs  convert.rs  data_type.rs  error.rs  expr_info.rs  ffi_expr.rs  function_def.rs  ids.rs  lib.rs  list_buffer.rs  meta.rs  native_error.rs  native_fn.rs  operator.rs  ops.rs  qualified_name.rs  span.rs  string_factory.rs  template.rs  type_def.rs  type_hash.rs  unresolved.rs  unresolved_entries.rs
crates/angelscript-core/src/core/: context.rs  diagnostics.rs  engine.rs  error.rs  function.rs  lockable_shared_bool.rs  mod.rs  module.rs  script_generic.rs  script_object.rs  typeinfo.rs
crates/angelscript-core/src/entries/: class.rs  common.rs  enum_entry.rs  funcdef.rs  function.rs  global_property.rs  interface.rs  mod.rs  primitive.rs  source.rs  template_param.rs  type_entry.rs
crates/angelscript-core/src/internal/: callback_manager.rs  mod.rs  thread_manager.rs
crates/angelscript-core/src/runtime/: call_context.rs  dynamic.rs  mod.rs  native_fn.rs  object_heap.rs
crates/angelscript-core/src/tests/: diagnostics_test.rs
crates/angelscript-core/src/types/: callbacks.rs  enums.rs  method_signature.rs  mod.rs  primitive_kind.rs  script_data.rs  script_memory.rs  script_value.rs  type_kind.rs  user_data.rs  visibility.rs
crates/angelscript-core/tests/: diagnostics_test.rs
crates/angelscript-ffi/: Cargo.toml
crates/angelscript-ffi/src/: error.rs  lib.rs  list_buffer.rs  native_fn.rs  template.rs
crates/angelscript-ffi/src/registry/: ffi_registry.rs  mod.rs
crates/angelscript-ffi/src/types/: ffi_enum.rs  ffi_expr.rs  ffi_interface.rs  ffi_property.rs  ffi_type.rs
crates/angelscript-module/: Cargo.toml
crates/angelscript-module/src/: class_builder.rs  enum_builder.rs  function_builder.rs  global_property.rs  interface_builder.rs  lib.rs  module.rs
crates/angelscript-modules/: Cargo.toml
crates/angelscript-modules/src/: array.rs  dict.rs  dictionary.rs  lib.rs  math.rs  std.rs  string.rs
docs/: angelscript.enbf  architecture.md  callfunc.md  compilation.md  design-third-party-type-wrappers.md  execution_model.md  ffi.md  gc.md  macro-usage.md  memory_management.md  operators.md  parser.md  symbol-registry.md  type_system.md
examples/: Cargo.toml  basic.rs  external_struct.rs  ref_type_external_struct.rs  value_type_external_struct.rs
scripts/: setup-hooks.sh
src/: angelscript.rs  callback_manager.rs  context.rs  engine.rs  enums.rs  error.rs  function.rs  globals.rs  jit_compiler.rs  lib.rs  lockable_shared_bool.rs  module.rs  script_generic.rs  scriptgeneric.rs  scriptobject.rs  string.rs  stringfactory.rs  thread_manager.rs  typeinfo.rs  types.rs  unit.rs  user_data.rs  utils.rs
tasks/: 32_string_factory.md  33_compilation_context.md  34_type_resolution.md  39_local_scope.md  41d_const_correctness.md  42_expression_calls.md  43b_assignment_expressions.md  45b_try_catch.md  46_function_compilation.md  46b_member_initialization.md  46c_import_declarations.md  47b10_implicit_this_method_calls.md  47b11_simplified_numeric_opcodes.md  47b1_override_resolution.md  47b2_interface_handle_addref.md  47b3_init_list_template_substitution.md  47b4_qualified_enum_paths.md  47b5_typedef_support.md  47b6_auto_type_inference.md  47b7_qualified_constructor_calls.md  47b8_test_script_fixes.md  47b9_scoped_import_functions.md  47b_unit_test_fixes.md  48_ffi_registration_gaps.md  48_vtable_dispatch.md  49_reference_type_semantics.md  50_constant_folding.md  51_multi_section_compilation.md  53_single_registry_shared_types.md  COMPILER_GAPS.md  code_review_fixes.md  qualified_name_registry.md
(+561 files in other folders)
