[package]
name = "angelscript"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0"
bitflags = "2.10"
num_enum = "0.7"
bumpalo = { version = "3.16", features = ["collections"] }
rustc-hash = "2.0"

[dev-dependencies]
criterion = "0.7"

[features]

[package.metadata.docs.rs]
all-features = true
no-deps = true

[[test]]
name = "parser"
path = "tests/parser_tests.rs"

[[bench]]
name = "parser_benchmarks"
harness = false

# [[bench]]
# name = "semantic_benchmarks"
# harness = false