[package]
name = "angelscript"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0"
bitflags = "2.10"
num_enum = "0.7"
bumpalo = { version = "3.16", features = ["collections"] }
rustc-hash = "2.0"
profiling = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.7"
puffin = "0.19"

[features]
default = []
profiling = ["dep:profiling"]
profile-with-puffin = ["profiling", "profiling/profile-with-puffin"]

[package.metadata.docs.rs]
all-features = true
no-deps = true

[[test]]
name = "module"
path = "tests/module_tests.rs"

[[bench]]
name = "module_benchmarks"
harness = false

# [[bench]]
# name = "semantic_benchmarks"
# harness = false