[workspace]
members = [
    "crates/angelscript-core",
    "crates/angelscript-parser",
    "crates/angelscript-registry",
    "crates/angelscript-compiler",
    "crates/angelscript-macros",
    "crates/angelscript-modules",
    ".",
]
resolver = "3"

[workspace.dependencies]
angelscript-core = { path = "crates/angelscript-core" }
thiserror = "2.0"
bitflags = "2.10"
num_enum = "0.7"
bumpalo = { version = "3.16", features = ["collections"] }
rustc-hash = "2.0"
ordered-float = "4.0"
profiling = { version = "1.0" }
xxhash-rust = { version = "0.8", features = ["xxh64"] }
criterion = "0.7"
puffin = "0.19"

[package]
name = "angelscript"
version = "0.1.0"
edition = "2024"

[dependencies]
angelscript-core.workspace = true
angelscript-compiler = { path = "crates/angelscript-compiler" }
angelscript-parser = { path = "crates/angelscript-parser" }
angelscript-registry = { path = "crates/angelscript-registry" }
angelscript-macros = { path = "crates/angelscript-macros" }
angelscript-modules = { path = "crates/angelscript-modules" }
thiserror.workspace = true
bitflags.workspace = true
num_enum.workspace = true
bumpalo.workspace = true
rustc-hash.workspace = true
ordered-float.workspace = true
profiling = { workspace = true, optional = true }
xxhash-rust.workspace = true

[dev-dependencies]
criterion.workspace = true
puffin.workspace = true
trybuild = "1.0"

[features]
default = []
profiling = ["dep:profiling"]
profile-with-puffin = ["profiling", "profiling/profile-with-puffin"]

[package.metadata.docs.rs]
all-features = true
no-deps = true

[[test]]
name = "unit"
path = "tests/unit_tests.rs"

[[bench]]
name = "module_benchmarks"
harness = false

# [[bench]]
# name = "semantic_benchmarks"
# harness = false
