[package]
name = "angelscript-addons"
version = "0.1.0"
edition = "2024"

[dependencies]
angelscript-core = { path = "../angelscript-core" }
angelscript-sys = { path = "../angelscript-sys" }
sprintf  = { version = "0.4.2", optional = true }
lazy_static = "1.5.0"

[features]
string = ["dep:sprintf"]
array = []

[package.metadata.docs.rs]
all-features = true
no-deps = true