[package]
name = "angelscript-addons"
version = "0.1.0"
edition = "2024"

[dependencies]
angelscript-core = { path = "../angelscript-core" }
angelscript-sys = { path = "../angelscript-sys" }

thiserror = "2.0.12"

#string
sprintf = { version = "0.4.2", optional = true }

# math
paste = { version = "1.0", optional = true }

#script builder
logos = { version = "0.15.0", optional = true }
regex = { version = "1.11.1", optional = true}

[features]
default = ["string", "math", "script-builder"]
string = ["dep:sprintf"]
math = ["dep:paste"]
script-builder = ["dep:logos", "dep:regex"]
script-builder-metadata = ["script-builder"]

[dev-dependencies]
tempdir = "0.3.7"

[package.metadata.docs.rs]
all-features = true
no-deps = true