[package]
name = "angelscript-core"
version = "0.1.0"
edition = "2024"

[dependencies]
angelscript-sys = { path = "../angelscript-sys" }
bitflags = "2.9"
thiserror = "2.0"
anyhow = "1.0"
libc = { version = "1.0.0-alpha.1", optional = true }
lazy_static = "1.5.0"

[features]
rust-threads = []
rust-alloc = ["dep:libc"]

[package.metadata.docs.rs]
all-features = true
no-deps = true