[package]
name = "angelscript-module"
version = "0.1.0"
edition = "2024"

[dependencies]
angelscript-core = { path = "../angelscript-core" }
angelscript-parser = { path = "../angelscript-parser" }
angelscript-ffi = { path = "../angelscript-ffi" }
thiserror.workspace = true
bumpalo.workspace = true
rustc-hash.workspace = true
