[package]
name = "angelscript-modules"
version = "0.1.0"
edition = "2024"
description = "Standard library modules for the AngelScript scripting engine"

[dependencies]
angelscript-core.workspace = true
angelscript-registry = { path = "../angelscript-registry" }
angelscript-macros = { path = "../angelscript-macros" }
ordered-float.workspace = true

[dev-dependencies]
